--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Final Project for Web Dev",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/.bin/webpack-dev-server --inline --hot"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/OSU-CS290-Sp2017/final-project-pitchin/issues"
   },
-  "homepage": "https://github.com/OSU-CS290-Sp2017/final-project-pitchin#readme"
+  "homepage": "https://github.com/OSU-CS290-Sp2017/final-project-pitchin#readme",
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.1.3",
+    "source-map-loader": "^0.2.1",
+    "typescript": "^2.3.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "@types/react": "^15.0.25",
+    "@types/react-dom": "^15.5.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  }
 }
