--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "outDir": "./dist/",
+        "outDir": "./public/",
         "sourceMap": true,
         "noImplicitAny": true,
         "target": "es5",
@@ -11,6 +11,6 @@
         "node_modules"
     ],
     "include": [
-        "./src/**/*"
+        "./source/**/*"
     ]
 }
